--- a/src/blog/tags.njk
+++ b/src/blog/tags.njk
@@ -3,17 +3,19 @@ pagination:
   data: collections
   size: 1
   alias: tag
+  filter: ['all']
 permalink: /blog/tags/{{ tag }}/
 ---
+
 <h1>Tagged “{{ tag }}”</h1>
-
 <ol>
-{% set taglist = collections[ tag ] %}
-{% for post in taglist | reverse %}
-  {% if post.data.draft != true %}
-    <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
-  {% endif %}
-{% endfor %}
-</ol>
+  {% set taglist = collections[ tag ] %}
 
-<!-- https://www.11ty.dev/docs/quicktips/tag-pages/ -->
+  {% for post in taglist | reverse %}
+    {% if post.data.draft != true %}
+      <li>
+        <a href="{{ post.url }}">{{ post.data.title }}</a>
+      </li>
+    {% endif %}
+  {% endfor %}
+</ol>
