add "postTags" collection, fix /blog/tags and /blog/tags/[tag] pages, fix sitemap accidentally using a layout

--- a/src/sitemap.webc
+++ b/src/sitemap.webc
@@ -1,7 +1,9 @@
 ---
+layout: null
 permalink: /sitemap.xml
 eleventyExcludeFromCollections: true
 ---
+
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="https://www.sitemaps.org/schemas/sitemap/0.9">
   <url webc:for="page of collections.all">
