--- a/src/blog/tags/tag.njk
+++ b/src/blog/tags/tag.njk
@@ -1,19 +1,16 @@
 ---
 pagination:
-  data: collections
+  data: collections.postTags
   size: 1
   alias: tag
-  filter: ['all']
 permalink: /blog/tags/{{ tag }}/
 ---
 
 <h1>Tagged “{{ tag }}”</h1>
 <ol>
-  {% set taglist = collections[ tag ] %}
-
-  {% for post in taglist | reverse %}
+  {% for post in collections[tag] | reverse %}
     {% if post.data.draft != true %}
-      <li>
+      <li class='list-disc list-inside'>
         <a href="{{ post.url }}">{{ post.data.title }}</a>
       </li>
     {% endif %}
