move /blog/tags/tag.11tydata.js data to /blog/tags/tag.webc frontmatter

--- a/src/blog/index.webc
+++ b/src/blog/index.webc
@@ -2,6 +2,8 @@
 override:tags: []
 ---
 
+<!-- TODO: move "/blog" to "/posts", and move "/blog/tags" to "/tags" to simplify url structure and tags overrides -->
+
 <section>
   <h1 class="text-6xl font-bold">Blog</h1>
 
