--- a/src/blog/tags/tag.webc
+++ b/src/blog/tags/tag.webc
@@ -1,3 +1,13 @@
+---
+pagination:
+  data: collections.postTags
+  size: 1
+  alias: tag
+# https://github.com/11ty/eleventy-plugin-webc/issues/42#issuecomment-1374152043
+# permalink syntax is treated the same in WebC as dynamic attributes (i.e. :href=""). Valid JS works inside of quoted text
+permalink: 'slugify(`/blog/tags/${tag}`)'
+---
+
 <h1 @text="tag"></h1>
 <ol>
   <li
