remove tailwind, setup several 11ty plugins, and more
- removed tailwind and tailwind classes from the site
- added a <post-tags> and <main-nav> component
- added `eleventy-plugin-validate` and `zod` so that I can enforce
  frontmatter data schemas for my collections
- fixed a bug with the 404 page, needed a permalink of 404.html to work
  properly with eleventy's dev server and on Netlify
- added `markdown-it-anchor` dependency and customized the `markdown-it`
  configuration for Markdown files so that all headings are
  automatically turned into links
- bumped to from the v4 to v5 of the `3.0.0-alpha` for eleventy
- added config option so that all markdown blog posts that have
  filenames starting with an `_` underscore will not be processed in
  production builds
- updated `jsconfig.json` with a few config options to validate my JS
  with TS, and also added an auto-generated `global.d.ts` file that is
  updated based upon the result of each eleventy build (hooks into
  11ty's "after" event hook)
- implememented the syntax-highlight and render 11ty plugins
- fixed pagination issue with the `/blog/tags/tag.webc` file

--- a/src/_includes/layouts/base.webc
+++ b/src/_includes/layouts/base.webc
@@ -9,7 +9,7 @@
 
     <meta
       name="author"
-      :content="site.author"
+      :content="site.author.name"
     />
     <meta
       name="description"
@@ -19,7 +19,12 @@
     <title @text="site.title"></title>
 
     <link
-      href="/assets/styles.css"
+      href="/assets/styles/index.css"
+      rel="stylesheet"
+      webc:keep
+    />
+    <link
+      href="/assets/styles/prism-theme.css"
       rel="stylesheet"
       webc:keep
     />
@@ -36,7 +41,6 @@
   </head>
   <body
     data-theme="dark"
-    class="font-sans bg-slate-900 text-slate-100"
     @raw="content"
   ></body>
 </html>
