add aria-current to <main-nav> component

--- a/src/_includes/layouts/base.webc
+++ b/src/_includes/layouts/base.webc
@@ -39,8 +39,10 @@
       type="image/svg+xml"
     />
   </head>
-  <body
-    data-theme="dark"
-    @raw="content"
-  ></body>
+  <body data-theme="dark">
+    <main>
+      <main-nav aria-label="Main navigation"></main-nav>
+      <div @raw="content"></div>
+    </main>
+  </body>
 </html>
