--- a/src/_includes/components/main-nav.webc
+++ b/src/_includes/components/main-nav.webc
@@ -1,12 +1,20 @@
-<div
-  webc:root="override"
-  aria-labelledby="article-toc"
-  class="nav"
->
+<script webc:setup>
+  let links = [
+    { url: '/', text: 'Ben Smith' },
+    { url: '/projects/', text: 'Projects' },
+    { url: '/blog/', text: 'Writing' },
+    { url: '/uses/', text: 'Uses' },
+  ];
+</script>
+
+<nav webc:root="override">
   <ul>
-    <li><a href="/">Ben Smith</a></li>
-    <li><a href="/projects">Projects</a></li>
-    <li><a href="/words">Writing</a></li>
-    <li><a href="/uses">Uses</a></li>
+    <li webc:for="link of links">
+      <a
+        :aria-current="page.url === link.url ? 'page' : undefined"
+        :href="link.url"
+        @text="link.text"
+      ></a>
+    </li>
   </ul>
-</div>
+</nav>
