implement RSS plugin with rss, atom, and json feeds. add collections dependencies to various places in our build

--- a/src/blog/index.webc
+++ b/src/blog/index.webc
@@ -1,5 +1,9 @@
 ---
 override:tags: []
+eleventyImport:
+  collections:
+    - posts
+    - postTags
 ---
 
 <!-- TODO: move "/blog" to "/posts" or "/words", and move "/blog/tags" to "/tags" to simplify url structure and tags overrides -->
