create "drafts" folder for posts, add patch-package to fix permalink: false throwing error in prod build

--- a/src/sitemap.webc
+++ b/src/sitemap.webc
@@ -6,7 +6,10 @@ eleventyExcludeFromCollections: true
 
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="https://www.sitemaps.org/schemas/sitemap/0.9">
-  <url webc:for="page of collections.all">
+  <url
+    webc:for="page of collections.all"
+    webc:if="page.url"
+  >
     <loc @text="url(site.url + page.url)"></loc>
     <lastmod @text="page.date.toISOString()"></lastmod>
   </url>
