--- a/src/blog/tags/tag.webc
+++ b/src/blog/tags/tag.webc
@@ -1,3 +1,27 @@
+---js
+{
+  eleventyImport: {
+    collections: ['posts', 'postTags'],
+  },
+  pagination: {
+    data: 'collections',
+    size: 1,
+    alias: 'tag',
+    before: function (tags, data) {
+      let filteredTags = tags.filter(
+        (tag) =>
+          data.collections.postTags.includes(tag) &&
+          data.collections[tag].length > 0
+      );
+      return filteredTags;
+    },
+  },
+  permalink: function ({ tag }) {
+    return `/blog/tags/${this.slugify(tag)}/`;
+  },
+}
+---
+
 <h1 @text='`Tagged "${tag}"`'></h1>
 <ul>
   <li webc:for="post of collections[tag]">
