--- a/src/_includes/layouts/base.webc
+++ b/src/_includes/layouts/base.webc
@@ -19,12 +19,12 @@
     <title @text="site.title"></title>
 
     <link
-      href="/assets/styles/index.css"
+      href="/styles.css"
       rel="stylesheet"
       webc:keep
     />
     <link
-      href="/assets/styles/prism-theme.css"
+      href="/assets/prism-theme.css"
       rel="stylesheet"
       webc:keep
     />
