feat: eleventy-plugin-lightningcss written and consumed

--- a/src/_includes/layouts/base.webc
+++ b/src/_includes/layouts/base.webc
@@ -19,7 +19,7 @@
     <title @text="site.title"></title>
 
     <link
-      href="/styles.css"
+      href="/assets/main.css"
       rel="stylesheet"
       webc:keep
     />
