--- a/src/_includes/layouts/post.webc
+++ b/src/_includes/layouts/post.webc
@@ -37,7 +37,7 @@
     <title @text="data.title"></title>
 
     <link
-      href="/styles.css"
+      href="/assets/main.css"
       rel="stylesheet"
       webc:keep
     />
