--- a/src/_includes/styles/main.css
+++ b/src/_includes/styles/main.css
@@ -1,8 +1,3 @@
 @import 'vars.css';
+@import 'defaults.css';
 @import 'utils.css';
-
-h1 {
-  color: red !important;
-  font-weight: 700 !important;
-  font-size: 24rem !important;
-}
