--- a/src/_includes/styles/vars.css
+++ b/src/_includes/styles/vars.css
@@ -1,4 +1,82 @@
-:root {
+/*
+ * inspiration: https://dribbble.com/shots/22263599-Retro-Apple-Logo
+ */
+@property --color-light {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #f5edce;
+}
+@property --color-dark {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #252525;
+}
+@property --color-green {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #91c483;
+}
+@property --color-yellow {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #fbb03b;
+}
+@property --color-orange {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #f78c45;
+}
+@property --color-red {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #e05b4b;
+}
+@property --color-purple {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #a696c8;
+}
+@property --color-blue {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #3c8dad;
+}
+
+/*
+ * inspiration: https://medium.com/@clarale/colors-1-vintage-palettes-for-your-website-3f8bf1ad10d3#4d2a
+ */
+@property --fieldtrip-navy {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #182335;
+}
+@property --fieldtrip-navy-darker {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #101723;
+}
+@property --fieldtrip-navy-lighter {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #202e46;
+}
+@property --fieldtrip-red {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #e15647;
+}
+@property --fieldtrip-pink {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #edad9b;
+}
+@property --fieldtrip-white {
+  syntax: '<color>';
+  inherits: false;
+  initial-value: #eae4cc;
+}
+
+.atproperty-fallback {
   /* inspiration: https://dribbble.com/shots/22263599-Retro-Apple-Logo */
   --color-light: #f5edce;
   --color-dark: #252525;
@@ -10,27 +88,10 @@
   --color-blue: #3c8dad;
 
   /* inspiration: https://medium.com/@clarale/colors-1-vintage-palettes-for-your-website-3f8bf1ad10d3#4d2a */
-  --fieldtrip-navy-h: 217;
-  --fieldtrip-navy-s: 38%;
-  --fieldtrip-navy-l: 15%;
-  --fieldtrip-navy: hsl(
-    var(--fieldtrip-navy-h) var(--fieldtrip-navy-s) var(--fieldtrip-navy-l)
-  );
-  --fieldtrip-navy-darker: hsl(
-    var(--fieldtrip-navy-h) var(--fieldtrip-navy-s)
-      calc(var(--fieldtrip-navy-l) - 5%)
-  );
-  --fieldtrip-navy-lighter: hsl(
-    var(--fieldtrip-navy-h) var(--fieldtrip-navy-s)
-      calc(var(--fieldtrip-navy-l) + 5%)
-  );
-
-  --fieldtrip-red: hsl(6, 72%, 58%);
-  --fieldtrip-pink: hsl(13, 70%, 77%);
-  --fieldtrip-white: hsl(48, 42%, 86%);
-}
-
-body {
-  background-color: var(--color-dark);
-  color: var(--color-light);
+  --fieldtrip-navy: #182335;
+  --fieldtrip-navy-darker: #101723;
+  --fieldtrip-navy-lighter: #202e46;
+  --fieldtrip-red: #e15647;
+  --fieldtrip-pink: #edad9b;
+  --fieldtrip-white: #eae4cc;
 }
