--- a/src/me.webc
+++ b/src/me.webc
@@ -9,7 +9,10 @@ layout: layouts/base.webc
 
   <ul>
     <li webc:for="link of links.external">
-      <a :href="url(link.url)" rel="noreferrer" target="_blank">
+      <a
+        :href="url(link.url)"
+        rel="noreferrer"
+      >
         <span @text="link.icon"></span>
         <span @text="link.title"></span>
       </a>
