--- a/src/_includes/layouts/base-html.webc
+++ b/src/_includes/layouts/base-html.webc
@@ -15,40 +15,70 @@
       name="description"
       :content="site.description"
     />
+    <link
+      :href="site.favicon"
+      rel="icon"
+      type="image/svg+xml"
+    />
 
     <title @text="site.title"></title>
 
+    <!--- TODO: add CSS as a custom template that 11ty processes via LightningCSS directly, to avoid having to use the webc:keep here --->
+    <link
+      href="/assets/main.css"
+      rel="preload"
+      as="style"
+      webc:keep
+    />
     <link
       href="/assets/main.css"
       rel="stylesheet"
       webc:keep
     />
+
     <link
       href="/assets/prism-theme.css"
       rel="stylesheet"
+      webc:if="loadPrismCSS"
       webc:keep
     />
-    <link
-      rel="icon"
-      :href="site.favicon"
-      type="image/svg+xml"
-    />
 
+    <!-- `critical`/inline bucket -->
     <style
-      @raw="getBundle('css')"
+      @raw="getBundle('css', 'critical')"
       webc:keep
     ></style>
     <script
-      @raw="getBundle('js')"
-      defer
+      @raw="getBundle('js', 'critical')"
+      type="module"
       webc:keep
     ></script>
-
-    <script type="module">
+    <script
+      webc:nokeep
+      webc:bucket="critical"
+    >
       if (!window.CSSPropertyRule) {
         document.documentElement.classList.add('atproperty-fallback');
       }
     </script>
+
+    <!-- `default` bucket -->
+    <link
+      :href="getBundleFileUrl('css')"
+      rel="preload"
+      as="style"
+      webc:keep
+    />
+    <link
+      :href="getBundleFileUrl('css')"
+      rel="stylesheet"
+      webc:keep
+    />
+    <script
+      :src="getBundleFileUrl('js')"
+      type="module"
+      webc:keep
+    ></script>
   </head>
 
   <body>
@@ -57,15 +87,11 @@
       @raw="content"
     ></template>
 
-    <style
-      @raw="getBundle('css', 'defer')"
-      data-bundle="defer"
-      webc:keep
-    ></style>
+    <!-- `defer` bucket -->
     <script
-      @raw="getBundle('js', 'defer')"
-      data-bundle="defer"
+      :src="getBundleFileUrl('js', 'defer')"
       defer
+      type="module"
       webc:keep
     ></script>
   </body>
