disabled prettier for webc and removed all self-closing tags
[See this Jake Archibald article](https://jakearchibald.com/2023/against-self-closing-tags-in-html/) on why self-closing tags that Prettier auto-formats to are actually not part of the spec

--- a/src/_includes/components/post-tags.webc
+++ b/src/_includes/components/post-tags.webc
@@ -3,9 +3,6 @@
     webc:nokeep
     webc:for="tag of tags"
   >
-    <li
-      webc:if="tag !== 'posts'"
-      @text="tag.trim()"
-    ></li>
+    <li webc:if="tag !== 'posts'" @text="tag.trim()"></li>
   </template>
 </ul>
