--- a/src/_includes/components/post-toc.webc
+++ b/src/_includes/components/post-toc.webc
@@ -1,21 +1,32 @@
 <details>
-  <summary id="article-toc-heading">Table of Contents</summary>
+  <summary id="article-toc-heading">
+    Table of Contents
+  </summary>
+
   <ul webc:if="headings.length > 0">
-    <li><a href="#top">Return to top</a></li>
+    <li>
+      <a href="#top">Return to top</a>
+    </li>
     <li webc:for="heading of headings">
-      <a
-        :href="`#${slugify(heading)}`"
-        @text="heading"
-      ></a>
+      <a :href="`#${slugify(heading)}`" @text="heading"></a>
     </li>
   </ul>
 </details>
+
+<style webc:scoped>
+  details {
+    cursor: pointer;
+  }
+</style>
 
 <script webc:bucket="defer">
   window.customElements.define(
     'post-toc',
     class PostTOCElement extends HTMLElement {
-      connectedCallback() {
+      /**
+       * If we are on our full-size layout, then we want to auto-expand the <details> element on page load so that the table of contents is easy to see. If we are on mobile and in a single-column view, we will keep the default <details> behavior of having the table of contents collapsed.
+       */
+      autoExpandOnDesktop() {
         if (window.innerWidth < 540) {
           return;
         }
@@ -24,6 +35,10 @@
           return;
         }
         detailsElement.open = true;
+      }
+
+      connectedCallback() {
+        this.autoExpandOnDesktop();
       }
     }
   );
