--- a/src/_includes/layouts/base-html.webc
+++ b/src/_includes/layouts/base-html.webc
@@ -1,98 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
 
-    <meta
-      name="author"
-      :content="site.author.name"
-    />
-    <meta
-      name="description"
-      :content="site.description"
-    />
-    <link
-      :href="site.favicon"
-      rel="icon"
-      type="image/svg+xml"
-    />
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title @text="site.title"></title>
+  <meta name="author" :content="site.author.name">
+  <meta name="description" :content="site.description">
+  <link :href="site.favicon" rel="icon" type="image/svg+xml">
 
-    <!--- TODO: add CSS as a custom template that 11ty processes via LightningCSS directly, to avoid having to use the webc:keep here --->
-    <link
-      href="/assets/main.css"
-      rel="preload"
-      as="style"
-      webc:keep
-    />
-    <link
-      href="/assets/main.css"
-      rel="stylesheet"
-      webc:keep
-    />
+  <title @text="site.title"></title>
 
-    <link
-      href="/assets/prism-theme.css"
-      rel="stylesheet"
-      webc:if="loadPrismCSS"
-      webc:keep
-    />
+  <!--- TODO: add CSS as a custom template that 11ty processes via LightningCSS directly, to avoid having to use the webc:keep here --->
+  <link href="/assets/main.css" rel="preload" as="style" webc:keep>
+  <link href="/assets/main.css" rel="stylesheet" webc:keep>
 
-    <!-- `critical`/inline bucket -->
-    <style
-      @raw="getBundle('css', 'critical')"
-      webc:keep
-    ></style>
-    <script
-      @raw="getBundle('js', 'critical')"
-      type="module"
-      webc:keep
-    ></script>
-    <script
-      webc:nokeep
-      webc:bucket="critical"
-    >
-      if (!window.CSSPropertyRule) {
-        document.documentElement.classList.add('atproperty-fallback');
-      }
-    </script>
+  <link href="/assets/prism-theme.css" rel="stylesheet" webc:if="loadPrismCSS" webc:keep>
 
-    <!-- `default` bucket -->
-    <link
-      :href="getBundleFileUrl('css')"
-      rel="preload"
-      as="style"
-      webc:keep
-    />
-    <link
-      :href="getBundleFileUrl('css')"
-      rel="stylesheet"
-      webc:keep
-    />
-    <script
-      :src="getBundleFileUrl('js')"
-      type="module"
-      webc:keep
-    ></script>
-  </head>
+  <!-- `critical`/inline bucket -->
+  <style @raw="getBundle('css', 'critical')" webc:keep></style>
+  <script @raw="getBundle('js', 'critical')" type="module" webc:keep></script>
+  <script webc:nokeep webc:bucket="critical">
+    if (!window.CSSPropertyRule) {
+      document.documentElement.classList.add('atproperty-fallback');
+    }
+  </script>
 
-  <body>
-    <template
-      webc:nokeep
-      @raw="content"
-    ></template>
+  <!-- `default` bucket -->
+  <link :href="getBundleFileUrl('css')" rel="preload" as="style" webc:keep>
+  <link :href="getBundleFileUrl('css')" rel="stylesheet" webc:keep>
+  <script :src="getBundleFileUrl('js')" type="module" webc:keep></script>
+</head>
 
-    <!-- `defer` bucket -->
-    <script
-      :src="getBundleFileUrl('js', 'defer')"
-      defer
-      type="module"
-      webc:keep
-    ></script>
-  </body>
+<body>
+  <template webc:nokeep @raw="content"></template>
+
+  <!-- `defer` bucket -->
+  <script :src="getBundleFileUrl('js', 'defer')" defer type="module" webc:keep></script>
+</body>
+
 </html>
