--- a/src/blog/tags/index.webc
+++ b/src/blog/tags/index.webc
@@ -8,9 +8,6 @@ eleventyImport:
 
 <ul>
   <li webc:for="tag of collections.postTags">
-    <a
-      :href="`/blog/tags/${tag}`"
-      @text="tag"
-    ></a>
+    <a :href="`/blog/tags/${tag}`" @text="tag"></a>
   </li>
 </ul>
