--- a/src/blog/tags/tag.webc
+++ b/src/blog/tags/tag.webc
@@ -25,9 +25,6 @@
 <h1 @text='`Tagged "${tag}"`'></h1>
 <ul>
   <li webc:for="post of collections[tag]">
-    <a
-      :href="post.url"
-      @text="post.data.title"
-    ></a>
+    <a :href="post.url" @text="post.data.title"></a>
   </li>
 </ul>
